# exolife

./: .dockerignore  .env.example  .gitignore  .gitmessage  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  compose.yaml  environment.lock.yml  environment.yml  pyproject.toml  pytest.ini
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
api/: __init__.py  server.py
config/constants/: drop_columns.yml  feature_engineering.yml  hz.yml  quality_filters.yml
config/dags/: dagspec.yaml  exolife_dag_v1.yaml
config/mergers/: exolife_merge_v1.yml
config/merges/: exolife_pipeline.yml
config/sources/: gaia_dr2_astrophysical_parameters.yml  gaia_dr3_astrophysical_parameters.yml  koi_candidates.yml  nasa_exoplanet_archive_pscomppars.yml  phl_exoplanet_catalog.yml  sweet_cat.yml  toi_candidates.yml
docker/: Dockerfile.api  Dockerfile.base  Dockerfile.gpu  docker-manage.sh
docker/entrypoints/: entry.api.sh  entry.dev.sh  entry.pipeline.sh
docs/reports/: exolife_processed_data_analysis_report.txt
notebooks/01-ingestion/: exolife-ingestion-phase1-v1.ipynb.ipynb  exolife_data_merge_analysis.ipynb
notebooks/01_ingestion-harmonization/: README.md
notebooks/02_quality-eda/: README.md
notebooks/03_feature_engineering-uncertainty/: README.md
notebooks/04_selection-function_labels/: README.md
notebooks/05_modeling-calibration/: README.md
notebooks/06_interpretability-diagnostics/: README.md
notebooks/07_deployment-monitoring/: README.md
package/: README.md
package/exolife/: cli.py  settings.py
package/exolife/data/: __init__.py  utils.py
package/exolife/data/fetch/: __init__.py  fetcher_base.py  fetcher_factory.py  fetchers.py  gaia_comprehensive_fetcher.py  manager.py  registry.py
package/exolife/data/fetch/fetchers/: __init__.py  gaia_fetcher.py  http_fetcher.py  tap_fetcher.py
package/exolife/data/merge/: __init__.py  base_merger.py  merge_base.py  merge_factory.py  mergers.py  pipeline_merger.py  registry.py
package/exolife/data/merge/mergers/: __init__.py  catalog_merger.py  coordinate_merger.py  identifier_merger.py  pipeline_merger.py
package/exolife/data/merge/steps/: __init__.py  feature_engineering.py  missingness.py  normalization.py  quality.py  units.py
package/exolife/data/preprocess/: base_preprocessor.py  registry.py
package/exolife/pipeline/: dag.py  executor.py
package/exolife/plugins/cli/: config.py  data.py  fetch.py  info.py  merge.py
results/: README.md
results/data_reports/: exolife_processed_data_analysis_report.txt
scripts/: analyze_processed_data.py  parquet2csv.py
src/exolife/: __init__.py  cli.py  config.py  settings.py
src/exolife/data/: __init__.py  data_pipelines.py  fetchers.py  hz_utils.py  mergers.py  preprocessors.py  utils.py
src/exolife/data/fetch/: __init__.py  fetcher_base.py  fetcher_factory.py  fetchers.py
src/exolife/data/merge/: __init__.py  merge_factory.py  mergers.py
src/exolife/data/preprocess/: __init__.py  preprocessors.py
src/exolife/data/utils/: hz_utils.py
src/exolife/pipeline/: __init__.py  dagspec.yaml  executor.py
src/exolife/plugins/cli/: config.py  dag.py  data.py  fetch.py  info.py  merge.py  run_data_pipeline.py
tests/: conftest.py  test_cli.py  test_dag.py  test_data_merge.py  test_data_utils.py  test_derived_features_serialization.py  test_executor.py  test_fetchers.py  test_integration.py  test_settings.py
